# OneLearningNotes

./: .gitignore  .gitmodules  FineTuning.md  FineTunning.md  report.md  report.py
circle_compare_weights/: CMakeLists.txt  main.cpp
test_models/conv_mnitst_model/: custom_conv_mnist_model.circle  custom_conv_mnit_model.tflite  generate_customized_conv_model.py
test_models/mobilenetv2/: generate_customized_mobilenetv2.py
training_data/mnist_data/: gen_mnist_train_data.py
training_data/mobilenet_data/: gen_mobilenet_train_data.py
